--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -695,9 +695,6 @@ if (infowindow === 'edit')
 							div.ms-Grid-col.ms-u-sm12.spacer#resize
 								a.ms-ListItem-image(href="#", id= doc._id, name= doc._id)
 									img(src= doc.thumb)
-								input(type="hidden", name="thumb", value= doc.thumb)
-								
-								input(type="hidden", name="img", value= doc.image)
 								
 							p.ms-font-s Change Image
 							div.ms-Grid-col.ms-u-xl12
@@ -719,28 +716,17 @@ if (infowindow === 'edit')
 					div.ms-Grid-row.spacer
 
 if (infowindow === 'doc')
-	if (img && img !== undefined)
-		- var size = 'large'
-		- var append = 'ms-Grid-col ms-u-sm12 ms-u-lg8'
-		- var sidepanel = 'ms-Grid-col ms-u-sm12 ms-u-lg4'
-	else
-		- var size = 'small'
-		- var append = 'ms-Grid-col ms-u-sm12'
-		- var sidepanel = 'ms-Grid-col ms-u-sm12'
+	- var size = 'small'
+	- var append = 'ms-Grid-col ms-u-sm12'
+	- var sidepanel = 'ms-Grid-col ms-u-sm12'
 	div(class="ms-Panel ms-Panel--"+ size + "")
 		div.ms-Panel-main.ms-Grid#mainpanel
 			div.ms-Grid-row.ms-Panel-contentInner
-				if (img)
-					if (type === 'image')
-						div#append(class= append)
-							img(src= img)
-					else
-						div#append(class= append, style="height: 100%")
-							embed(src= img, width="100%", height="100%")
 				div.ms-Grid-row#sidepanel(class= sidepanel)
 					div.ms-Grid-col.ms-u-sm12
 						p.ms-font-xl #{doc.properties.label} 
-					
+						div#append(class= append)
+							img(src= doc.properties.image)
 					div.ms-Grid-col.ms-u-sm12
 						p.ms-font-s.ms-fontWeight-semibold #{doc.properties.city} 
 							br
