--- a/views/publish.pug
+++ b/views/publish.pug
@@ -1,7 +1,7 @@
 extends layout
 block page
 	- var menu = 'home'
-	- var menudata = data[userindex]
+	- var menudata = data[data.length-1]
 block content
 	- var zfactor = 0.15 * zoom;
 
