mongoose auto-increment for id

--- a/views/publish.pug
+++ b/views/publish.pug
@@ -219,15 +219,21 @@ block content
 			
 		})
 		var lMarker;
+		var currentfeature;
+		if (#{data[id]._id} === #{id}) {
+			currentfeature = #{data[id]};
+		} else {
+			currentfeature = #{doc};
+		}
 		if (window.location.pathname.split('/')[2] !== 'addfeature' && window.location.pathname.split('/')[2] !== 'editcontent') {
 			
-			lMarker = L.marker([#{data[id].geometry.coordinates[1]}, #{data[id].geometry.coordinates[0]}]).addTo(map);
+			lMarker = L.marker([currentfeature.geometry.coordinates[1], currentfeature.geometry.coordinates[0]]).addTo(map);
 			
 		} else {
-			lMarker = L.marker([#{data[id].geometry.coordinates[1]}, #{data[id].geometry.coordinates[0]}], {draggable: true}).addTo(map);
+			lMarker = L.marker([currentfeature.geometry.coordinates[1], currentfeature.geometry.coordinates[0]], {draggable: true}).addTo(map);
 			
 		}
-		map.setView([#{data[id].geometry.coordinates[1]}, #{data[id].geometry.coordinates[0]}])
+		map.setView([currentfeature.geometry.coordinates[1], currentfeature.geometry.coordinates[0]])
 					
 		map.on('zoomend', function(e){
 			if (window.location.pathname.split('/')[2] === 'addfeature' || window.location.pathname.split('/')[2] === 'editcontent') {
