--- a/views/publish.pug
+++ b/views/publish.pug
@@ -221,13 +221,13 @@ block content
 		var lMarker;
 		if (window.location.pathname.split('/')[2] !== 'addfeature' && window.location.pathname.split('/')[2] !== 'editcontent') {
 			
-			lMarker = L.marker([#{data[id].geometry.coordinates[1]}, #{data[id].geometry.coordinates[0]}]).addTo(map);
+			lMarker = L.marker([#{lat}, #{lng}]).addTo(map);
 			
 		} else {
-			lMarker = L.marker([#{data[id].geometry.coordinates[1]}, #{data[id].geometry.coordinates[0]}], {draggable: true}).addTo(map);
+			lMarker = L.marker([#{lat}, #{lng}], {draggable: true}).addTo(map);
 			
 		}
-		map.setView([#{data[id].geometry.coordinates[1]}, #{data[id].geometry.coordinates[0]}])
+		map.setView([#{lat}, #{lng}])
 					
 		map.on('zoomend', function(e){
 			if (window.location.pathname.split('/')[2] === 'addfeature' || window.location.pathname.split('/')[2] === 'editcontent') {
